# py99

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bb.edn  bump-version.sh  deploy.sh  docker-compose.yml  project.clj  pyproject.toml  re_exam.clj  upload-restart.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.git.orig/: config  index  packed-refs
.git.orig/logs/: HEAD
bb/: midterm.clj
db-dumps/: dump.sh  fetch.sh  midterm-exam-down.sh  midterm-exam-up.sh  reset.sh  restore.sh
initdb.d/: init-db.sh
python/: py99_client.py  py99_errors.py
resources/docs/: c.md  docs.md  problems-after-100.edn  problems.edn  problems.md  seed-problems.html  seed-problems.md  weekly-points.html
resources/html/: about.html  admin.html  answer-form.html  answers-by-problems.html  answers-comments.html  base.html  comment-form.html  comments-count.html  comments-sent.html  comments.html  edit-problems.html  error.html  indent-check.html  login.html  logins.html  midterm-2.html  midterm.html  problems.html  profile.html  ranking-all.html  ranking.html  re-exam-end.html  register.html  request.html  status.html  stocks.html  submissions.html  todays.html  user-actions-page.html  user-class.html
resources/migrations/: 20211004053919-users.up.sql  20211004130940-problems.down.sql  20211004130940-problems.up.sql  20211009064829-answers.up.sql  20211011004309-comments.up.sql  20211220023250-last-login.down.sql  20220209030507-frozens.down.sql  (+12 more)
script/: Justfile  answers.txt  comments.txt  remove-2023.sh
systemd/: py99.service  start.sh  stop.sh
(+36 files in other folders)
