[tool.poetry]
name = "py99"
version = "0.1.0"
description = "py99 server"
authors = ["Hiroshi Kimura <hiroshi.kimura.0331@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
numpy = "^1.26.3"
ruff = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
